# WAY

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md
cli/: main.cpp
include/WAY/: AuthenticationService.hpp  AuthenticationStrategy.hpp  ConfigManager.hpp  DatabaseFactory.hpp  GoogleOAuth2Strategy.hpp  IDatabase.hpp  ISessionManager.hpp  InMemorySessionManager.hpp  JwtStrategy.hpp  PasswordStrategy.hpp  RateLimiter.hpp  SQLiteDatabase.hpp  User.hpp  server.hpp
src/: AuthenticationService.cpp  ConfigManager.cpp  DatabaseFactory.cpp  GoogleOAuth2Strategy.cpp  InMemorySessionManager.cpp  JwtStrategy.cpp  PasswordStrategy.cpp  RateLimiter.cpp  SQLiteDatabase.cpp  main.cpp  server.cpp
src/cli/: main.cpp
src/tests/: test_framework.cpp
tests/: test_framework.cpp
